# flamingos-preview

./: .gitignore  .gitmodules  CHAPTER-MERGE.md  CLEANUP-NOTES.md  Cargo.toml  Makefile  README.md  backports.txt  chapter-dirs.txt  config-jtag.txt  ft232h-openocd.cfg  make-submodules.sh  rollforward.py  rust-toolchain.toml  tool-commands.sh
.cargo/: config.toml
.github/workflows/: build_rpi3.yml  build_rpi4.yml
05_drivers_gpio_uart/: Cargo.toml
05_drivers_gpio_uart/.cargo/: config.toml
05_drivers_gpio_uart/src/: console.rs  main.rs  print.rs
05_drivers_gpio_uart/src/console/: null_console.rs
06_uart_chainloader/: Cargo.toml
06_uart_chainloader/src/: console.rs  main.rs  panic_wait.rs  print.rs
08_hw_debug_JTAG/: README.html
kernel/: Cargo.toml  build.rs
kernel/src/: console.rs  lib.rs  main.rs  panic_wait.rs  print.rs
kernel/src/_arch/aarch64/cpu/: boot.s
kernel/src/_arch/aarch64/memory/: mmu.rs
kernel/src/_arch/aarch64/memory/mmu/: translation_table.rs
kernel/src/bsp/device_driver/bcm/: bcm2xxx_pl011_uart.rs
kernel/src/bsp/raspberrypi/: kernel.ld
kernel/src/bsp/raspberrypi/memory/: mmu.rs
kernel/src/console/: null_console.rs
kernel/src/memory/mmu/: types.rs
libraries/test-types/: Cargo.toml
src/: bsp.rs  console.rs  driver.rs  main.rs  panic_wait.rs  print.rs
src/_arch/aarch64/: cpu.rs  time.rs
src/_arch/aarch64/cpu/: boot.s
src/_arch/aarch64/memory/: mmu.rs
src/bsp/device_driver/bcm/: bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  memory.rs
src/console/: null_console.rs
(+2 files in other folders)
